# solclash

./: .dockerignore  .gitignore  arena-config.json  eslint.config.mjs  package.json  tsconfig.base.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: arena-e2e.yml  quality.yml  starter-contract.yml
.husky/: pre-push
apps/arena/: README.md  package.json
apps/arena-harness/: Cargo.toml  README.md
apps/arena-harness/src/: abi.rs  error.rs  main.rs  protocol.rs
apps/arena/docker/: Dockerfile
apps/arena/src/: agents.ts  cli.ts  harness.ts  index.ts  logger.ts  runner.ts  weights.ts  workspace.ts
apps/arena/src/__tests__/: agents.test.ts  cli-invalid.test.ts  e2e.test.ts  harness.test.ts  onchain.e2e.test.ts  weights.test.ts  workspace.test.ts
apps/tournament/: README.md  package.json
apps/tournament/docker/agent/: Dockerfile  edit-runner.mjs
apps/tournament/docker/arena/: Dockerfile
apps/tournament/src/: cli.ts  inject.ts  runner.ts
apps/tournament/src/__tests__/: cli-invalid.test.ts  (+1 more)
docker/base/: Dockerfile
docs/: README.md  codeclash.txt  engineering-quality.md  scoring-weights.json  solclash-core-spec.md  solclash-data-ops.md  solclash-edit-phase-spec.md  solclash-microstructure-spec.md  solclash-onchain-abi.md  solclash-paper.md  solclash-starter-contract.md  solclash-tournament.md
docs/sdk/: edit-phase-guide.md  extras.md  permissions-and-hooks.md  reference.md  sessions.md  streaming.md  tools-and-mcp.md
scripts/: build-images.sh  run-fast-tests.ts
starter/: README.md
starter/program/src/: policy.rs  types.rs
(+10 files in other folders)
