[package]
name = "solclash-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
borsh = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "io-util"] }
solana-program = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
